--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://placehold.co/192x192/F8355C/ffffff/png?text=YONO",
+      "src": "https://i.imgur.com/Q28hkNa.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/512x512/F8355C/ffffff/png?text=YONO",
+      "src": "https://i.imgur.com/Q28hkNa.png",
       "sizes": "512x512",
       "type": "image/png"
     }
